@@ -1,4 +1,8 @@
 2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
+	*schedule.cc: Improved Automaton baking in Silver Seed.
+		display_wares cost changed in SI (needed for Automaton).
+
+2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
 	*schedule.cc: The Moonshade Baker now displays goods. Removed accidental temporary flag.
 		gamemgr\sigame.cc: Map patches were added to remove	the bread, dough, and flour in
 		Moonshade that are on the wrong tables. Dev games are now excluded from	all the SI
